@@ -1,13 +1,15 @@
 package ch.admin.bj.swiyu.didtoolbox;
 
 import io.ipfs.multibase.Base58;
-import org.bouncycastle.crypto.params.Ed25519PrivateKeyParameters;
-import org.bouncycastle.crypto.params.Ed25519PublicKeyParameters;
 import org.bouncycastle.crypto.signers.Ed25519Signer;
+import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.bouncycastle.util.io.pem.PemObject;
 import org.bouncycastle.util.io.pem.PemWriter;
 
-import java.io.*;
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
@@ -19,129 +21,128 @@ import java.security.cert.CertificateException;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.NamedParameterSpec;
 import java.util.Arrays;
+import java.util.Set;
 
 /**
  * The {@link Ed25519VerificationMethodKeyProviderImpl} class is a {@link VerificationMethodKeyProvider} implementation used to generate pairs of
- * public and private keys for the Ed25519 algorithm (or loading them from the file system). Such key pair is used then
+ * public and private keys for the Ed25519 algorithm (or loading them from the file system). Such key pair is then used
  * for the purpose of <a href="https://identity.foundation/didwebvh/v0.3">did:tdw</a> log creation.
  * Furthermore, it also plays an essential role while <a href="https://www.w3.org/TR/vc-di-eddsa/#create-proof-eddsa-jcs-2022">creating data integrity proof</a>.
- * It builds extensively on top of {@link org.bouncycastle.crypto.signers.Ed25519Signer} and introduces various useful helpers.
+ * It builds extensively on top of {@link Ed25519Signer} and introduces various useful helpers.
  * <p>
- * It is predominantly intended to be used within the {@link TdwCreator.TdwCreatorBuilder#verificationMethodKeyProvider} method
- * prior to a {@link TdwCreator#create(URL)} call.
+ * It is predominantly intended to be used within a:
+ * <ul>
+ * <li> {@link ch.admin.bj.swiyu.didtoolbox.TdwCreator.TdwCreatorBuilder#verificationMethodKeyProvider(VerificationMethodKeyProvider)} method
+ * (prior to a {@link ch.admin.bj.swiyu.didtoolbox.TdwCreator#create(URL)} call)</li>
+ * <li>{@link ch.admin.bj.swiyu.didtoolbox.TdwUpdater.TdwUpdaterBuilder#verificationMethodKeyProvider(VerificationMethodKeyProvider)} method
+ * (prior to a {@link ch.admin.bj.swiyu.didtoolbox.TdwUpdater#update(String)} call).</li>
+ * </ul>
  * <p>
- * Thanks to the following methods, it is also capable of loading an already existing key material from the file system:
+ * Thanks to the following constructor(s), it is also capable of loading an already existing key material from the file system:
  * <ul>
  * <li>{@link Ed25519VerificationMethodKeyProviderImpl#Ed25519VerificationMethodKeyProviderImpl(File, File)} for loading the update (Ed25519) key from
  * <a href="https://en.wikipedia.org/wiki/Privacy-Enhanced_Mail">PEM</a> files</li>
- * <li>{@link Ed25519VerificationMethodKeyProviderImpl#Ed25519VerificationMethodKeyProviderImpl(InputStream, String, String)} for loading the update (Ed25519) key from Java KeyStore (JKS) files</li>
+ * <li>{@link Ed25519VerificationMethodKeyProviderImpl#Ed25519VerificationMethodKeyProviderImpl(InputStream, String, String, String)} for loading the update (Ed25519) key from Java KeyStore (JKS) files</li>
  * </ul>
- *
- * @see KeyPairGenerator
- * @see org.bouncycastle.crypto.signers.Ed25519Signer
  */
 public class Ed25519VerificationMethodKeyProviderImpl implements VerificationMethodKeyProvider {
 
-    byte[] signingKey = new byte[32];
-    byte[] verifyingKey = new byte[32];
-    private KeyPair keyPair;
+    final private static String DEFAULT_JCE_PROVIDER_NAME = BouncyCastleProvider.PROVIDER_NAME;
+
+    static {
+        Security.addProvider(new BouncyCastleProvider());
+    }
+
+    protected final KeyPair keyPair;
+    protected Provider provider = Security.getProvider(DEFAULT_JCE_PROVIDER_NAME);
+
+    protected Ed25519VerificationMethodKeyProviderImpl(KeyPair keyPair, Provider provider) {
+        this.keyPair = keyPair;
+
+        if (provider != null) {
+            this.provider = provider;
+        }
+
+        if (this.provider == null) {
+            throw new RuntimeException("No default JCE provider installed: " + DEFAULT_JCE_PROVIDER_NAME);
+        }
+
+        // sanity check
+        if (!this.verify("hello world".getBytes(StandardCharsets.UTF_8), this.generateSignature("hello world".getBytes(StandardCharsets.UTF_8)))) {
+            throw new RuntimeException("keys do not match");
+        }
+    }
+
+    /**
+     * The copy constructor.
+     */
+    private Ed25519VerificationMethodKeyProviderImpl(Ed25519VerificationMethodKeyProviderImpl obj) {
+        this(obj.keyPair, obj.provider);
+    }
 
     /**
      * @see KeyPairGenerator
      */
-    Ed25519VerificationMethodKeyProviderImpl() {
+    protected Ed25519VerificationMethodKeyProviderImpl() {
 
         try {
             KeyPairGenerator keyPairGen = KeyPairGenerator.getInstance("Ed25519");
             //keyPairGen.initialize(NamedParameterSpec.ED25519, new SecureRandom(secretKey));
             keyPairGen.initialize(NamedParameterSpec.ED25519);
 
-            keyPair = keyPairGen.generateKeyPair();
-
-            byte[] privateKey = keyPair.getPrivate().getEncoded(); // may return null
-            this.signingKey = Arrays.copyOfRange(privateKey, privateKey.length - 32, privateKey.length); // the last 32 bytes
-
-            byte[] publicKey = keyPair.getPublic().getEncoded();
-            this.verifyingKey = Arrays.copyOfRange(publicKey, publicKey.length - 32, publicKey.length); // the last 32 bytes
+            this.keyPair = keyPairGen.generateKeyPair();
 
         } catch (InvalidAlgorithmParameterException | NoSuchAlgorithmException e) {
             throw new RuntimeException(e);
         }
-
     }
 
     /**
-     * Yet another {@link Ed25519VerificationMethodKeyProviderImpl} constructor accepting keys in multibase base58btc format, e.g.
-     * <p>
-     * {@snippet lang = JSON:
-     *     {
-     *         "publicKeyMultibase": "z6MkrJVnaZkeFzdQyMZu1cgjg7k1pZZ6pvBQ7XJPt4swbTQ2",
-     *         "secretKeyMultibase": "z3u2en7t5LR2WtQH5PfFqMqwVHBeXouLzo6haApm8XHqvjxq"
-     *     }
-     *}
-     * <p>
-     * CAUTION It is assumed the keys do really match. Otherwise, {@link RuntimeException} is thrown.
+     * The Java KeyStore (type: PKCS12) compliant {@link Ed25519VerificationMethodKeyProviderImpl} constructor.
      *
-     * @param privateKeyMultibase the base58-encoded string to decode as private Ed25519 key
-     * @param publicKeyMultibase  the base58-encoded string to decode as public Ed25519 key
-     */
-    public Ed25519VerificationMethodKeyProviderImpl(String privateKeyMultibase, String publicKeyMultibase) {
-
-        var signingKey = Base58.decode(privateKeyMultibase.substring(1));
-        var verifyingKey = Base58.decode(publicKeyMultibase.substring(1));
-
-        ByteBuffer buff = ByteBuffer.allocate(32);
-        buff.put(Arrays.copyOfRange(signingKey, signingKey.length - 32, signingKey.length));
-        this.signingKey = buff.array();
-
-        buff = ByteBuffer.allocate(32);
-        buff.put(Arrays.copyOfRange(verifyingKey, verifyingKey.length - 32, verifyingKey.length));
-        this.verifyingKey = buff.array();
-
-        // sanity check
-        if (!this.verify("hello world", this.signString("hello world"))) {
-            throw new RuntimeException("keys do not match");
-        }
-    }
-
-    /**
-     * The Java KeyStore (JKS) compliant {@link Ed25519VerificationMethodKeyProviderImpl} constructor.
-     *
-     * @param jksFile  the input stream from which the keystore is loaded, or null
-     * @param password the password used to check the integrity of the keystore, the password used to unlock the keystore, or null
-     * @param alias    the alias name the key is associated with
+     * @param jksFile     the input stream from which the keystore is loaded, or null
+     * @param password    the password used to check the integrity of the keystore, the password used to unlock the keystore, or null
+     * @param alias       the alias name the key is associated with
+     * @param keyPassword the password for recovering the key, or {@code null} if not required
      * @throws KeyStoreException           ...
      * @throws CertificateException        ...
      * @throws IOException                 ...
      * @throws NoSuchAlgorithmException    ...
      * @throws UnrecoverableEntryException ...
+     * @throws KeyException                ...
      * @see KeyStore#load(InputStream, char[])
      */
-    public Ed25519VerificationMethodKeyProviderImpl(InputStream jksFile, String password, String alias) throws KeyStoreException, CertificateException, IOException, NoSuchAlgorithmException, UnrecoverableEntryException {
+    public Ed25519VerificationMethodKeyProviderImpl(InputStream jksFile, String password, String alias, String keyPassword)
+            throws KeyStoreException, CertificateException, IOException, NoSuchAlgorithmException, UnrecoverableEntryException, KeyException {
 
-        KeyStore keyStore = KeyStore.getInstance("JKS");
+        // CAUTION Calling KeyStore.getInstance("JKS") may cause:
+        //         "java.security.NoSuchAlgorithmException: no such algorithm: EdDSA for provider SUN"
+        KeyStore keyStore = KeyStore.getInstance("PKCS12", this.provider);
         keyStore.load(jksFile, password.toCharArray()); // java.io.IOException: keystore password was incorrect
 
-        //var entryPassword = new KeyStore.PasswordProtection(password.toCharArray());
-        //KeyStore.Entry keyEntry = keyStore.getEntry(alias, entryPassword);
+        // CAUTION Flexible constructors is a preview feature and is disabled by default. (use --enable-preview to enable flexible constructors)
+        //this(createFromKeyStore(keyStore, alias, keyPassword));
 
-        Key key = keyStore.getKey(alias, password.toCharArray()); // 34 bytes, may return null if the given alias does not exist or does not identify a key-related entry
-        /*
-        if key == null {
-            throw
-        }
-         */
-        byte[] privateKey = key.getEncoded(); // 48 bytes
-        this.signingKey = Arrays.copyOfRange(privateKey, privateKey.length - 32, privateKey.length); // the last 32 bytes
+        var obj = createFromKeyStore(keyStore, alias, keyPassword);
+        this.keyPair = obj.keyPair;
+        this.provider = obj.provider;
+    }
 
-        var cert = keyStore.getCertificate(alias); // may return null if the given alias does not exist or does not contain a certificate
-        /*
-        if cert == null {
-            throw
-        }
-         */
-        byte[] publicKey = cert.getPublicKey().getEncoded(); // 44 bytes
-        this.verifyingKey = Arrays.copyOfRange(publicKey, publicKey.length - 32, publicKey.length); // the last 32 bytes
+    /**
+     * The KeyStore-compliant {@link Ed25519VerificationMethodKeyProviderImpl} constructor.
+     *
+     * @param keyStore the {@link KeyStore} object (already loaded)
+     * @param alias    the alias name the key is associated with
+     * @param password the password for recovering the key, or {@code null} if not required
+     * @throws KeyStoreException           ...
+     * @throws NoSuchAlgorithmException    ...
+     * @throws UnrecoverableEntryException ...
+     * @throws KeyException                ...
+     */
+    public Ed25519VerificationMethodKeyProviderImpl(KeyStore keyStore, String alias, String password)
+            throws KeyStoreException, NoSuchAlgorithmException, UnrecoverableEntryException, KeyException {
+
+        this(createFromKeyStore(keyStore, alias, password));
     }
 
     /**
@@ -158,18 +159,14 @@ public class Ed25519VerificationMethodKeyProviderImpl implements VerificationMet
 
         byte[] privatePemBytes = PemUtils.parsePEMFile(privatePemFile);
         PrivateKey privKey = PemUtils.getPrivateKeyEd25519(privatePemBytes);
-        byte[] privateKey = privKey.getEncoded(); // 48 bytes
-        this.signingKey = Arrays.copyOfRange(privateKey, privateKey.length - 32, privateKey.length); // the last 32 bytes
 
         byte[] publicPemBytes = PemUtils.parsePEMFile(publicPemFile);
         PublicKey pubKey = PemUtils.getPublicKeyEd25519(publicPemBytes);
-        byte[] publicKey = pubKey.getEncoded(); // 44 bytes
-        this.verifyingKey = Arrays.copyOfRange(publicKey, publicKey.length - 32, publicKey.length); // the last 32 bytes
 
-        keyPair = new KeyPair(pubKey, privKey);
+        this.keyPair = new KeyPair(pubKey, privKey);
 
         // sanity check
-        if (!this.verify("hello world", this.signString("hello world"))) {
+        if (!this.verify("hello world".getBytes(StandardCharsets.UTF_8), this.generateSignature("hello world".getBytes(StandardCharsets.UTF_8)))) {
             throw new RuntimeException("keys do not match");
         }
     }
@@ -184,44 +181,67 @@ public class Ed25519VerificationMethodKeyProviderImpl implements VerificationMet
      * @throws IOException             in case of a parse error.
      * @throws InvalidKeySpecException if any of the given key specifications is inappropriate for its key factory to produce a key.
      */
-    public Ed25519VerificationMethodKeyProviderImpl(File privatePemFile, String publicKeyMultibase) throws IOException, InvalidKeySpecException {
+    public Ed25519VerificationMethodKeyProviderImpl(File privatePemFile, String publicKeyMultibase) throws IOException, InvalidKeySpecException, NoSuchAlgorithmException {
 
         byte[] privatePemBytes = PemUtils.parsePEMFile(privatePemFile);
         PrivateKey privKey = PemUtils.getPrivateKeyEd25519(privatePemBytes);
-        byte[] privateKey = privKey.getEncoded(); // 48 bytes
-        this.signingKey = Arrays.copyOfRange(privateKey, privateKey.length - 32, privateKey.length); // the last 32 bytes
 
         var verifyingKey = Base58.decode(publicKeyMultibase.substring(1));
-
         ByteBuffer buff = ByteBuffer.allocate(32);
-        buff = ByteBuffer.allocate(32);
         buff.put(Arrays.copyOfRange(verifyingKey, verifyingKey.length - 32, verifyingKey.length));
-        this.verifyingKey = buff.array();
+        var pubKey = Ed25519Utils.toPublicKey(buff.array());
+
+        this.keyPair = new KeyPair(pubKey, privKey);
 
         // sanity check
-        if (!this.verify("hello world", this.signString("hello world"))) {
+        if (!this.verify("hello world".getBytes(StandardCharsets.UTF_8), this.generateSignature("hello world".getBytes(StandardCharsets.UTF_8)))) {
             throw new RuntimeException("keys do not match");
         }
     }
 
     /**
-     * The encoding of an Ed25519 public key MUST start with the two-byte prefix 0xed01 (the varint expression of 0xed),
-     * followed by the 32-byte public key data. The resulting 34-byte value MUST then be encoded using the base-58-btc alphabet,
-     * and then prepended with the <a href="https://www.w3.org/TR/controller-document/#multibase-0">base-58-btc Multibase header (z)</a>.
-     * <p>
-     * See <a href="https://www.w3.org/TR/controller-document/#Multikey">Multikey</a>
+     * Yet another static helper. Self-explanatory.
      *
-     * @param verifyingKey
-     * @return
+     * @param keyStore the {@link KeyStore} object (already loaded)
+     * @param alias    the alias name the key is associated with
+     * @param password the password for recovering the key, or {@code null} if not required
+     * @throws KeyStoreException           ...
+     * @throws NoSuchAlgorithmException    ...
+     * @throws UnrecoverableEntryException ...
+     * @throws KeyException                ...
      */
-    static String buildVerificationKeyMultibase(byte[] verifyingKey) {
+    private static Ed25519VerificationMethodKeyProviderImpl createFromKeyStore(KeyStore keyStore, String alias, String password)
+            throws KeyStoreException, NoSuchAlgorithmException, UnrecoverableEntryException, KeyException {
 
-        ByteBuffer buff = ByteBuffer.allocate(34);
-        // See https://github.com/multiformats/multicodec/blob/master/table.csv#L98
-        buff.put((byte) 0xed); // Ed25519Pub/ed25519-pub is a draft code tagged "key" and described by: Ed25519 public key.
-        buff.put((byte) 0x01);
-        buff.put(Arrays.copyOfRange(verifyingKey, verifyingKey.length - 32, verifyingKey.length));
-        return 'z' + Base58.encode(buff.array());
+        if (!keyStore.isKeyEntry(alias)) {
+            throw new KeyException("The alias does not exist or does not identify a key-related entry: " + alias);
+        }
+
+        /* KeyStore#getKey throws:
+        KeyStoreException – if the keystore has not been initialized (loaded).
+        NoSuchAlgorithmException – if the algorithm for recovering the key cannot be found
+        UnrecoverableKeyException – if the key cannot be recovered (e.g., the given password is wrong).
+         */
+        PrivateKey key;
+        if (password != null) {
+            key = (PrivateKey) keyStore.getKey(alias, password.toCharArray()); // 34 bytes, may return null if the given alias does not exist or does not identify a key-related entry
+        } else {
+            key = (PrivateKey) keyStore.getKey(alias, null); // 34 bytes, may return null if the given alias does not exist or does not identify a key-related entry
+        }
+
+        if (key == null) {
+            throw new KeyException("The alias does not exist or does not identify a key-related entry: " + alias);
+        }
+
+        // throws KeyStoreException – if the keystore has not been initialized (loaded)
+        var cert = keyStore.getCertificate(alias); // may return null if the given alias does not exist or does not contain a certificate
+        if (cert == null) {
+            throw new KeyException("The alias does not exist or does not contain a certificate: " + alias);
+        }
+
+        var publicKey = cert.getPublicKey();
+
+        return new Ed25519VerificationMethodKeyProviderImpl(new KeyPair(publicKey, key), keyStore.getProvider());
     }
 
     /**
@@ -230,14 +250,17 @@ public class Ed25519VerificationMethodKeyProviderImpl implements VerificationMet
      */
     void writePrivateKeyAsPem(File file) throws IOException {
 
-        if (keyPair == null) {
+        if (this.keyPair == null) {
             throw new RuntimeException("This instance features no self-generated key pair.");
         }
 
-        var key = keyPair.getPrivate();
+        var privateKeyEncoded = this.keyPair.getPrivate().getEncoded();
+        if (privateKeyEncoded == null) {
+            throw new RuntimeException("The key pair features a private key that does not support encoding");
+        }
         PemWriter pemWriter = new PemWriter(new FileWriter(file));
         try {
-            pemWriter.writeObject(new PemObject("PRIVATE KEY", key.getEncoded()));
+            pemWriter.writeObject(new PemObject("PRIVATE KEY", privateKeyEncoded));
         } finally {
             pemWriter.close();
         }
@@ -259,14 +282,17 @@ public class Ed25519VerificationMethodKeyProviderImpl implements VerificationMet
      */
     void writePublicKeyAsPem(File file) throws IOException {
 
-        if (keyPair == null) {
+        if (this.keyPair == null) {
             throw new RuntimeException("This instance features no self-generated key pair.");
         }
 
-        var key = keyPair.getPublic();
+        var publicKeyEncoded = this.keyPair.getPublic().getEncoded();
+        if (publicKeyEncoded == null) {
+            throw new RuntimeException("The key pair features a public key that does not support encoding");
+        }
         PemWriter pemWriter = new PemWriter(new FileWriter(file));
         try {
-            pemWriter.writeObject(new PemObject("PUBLIC KEY", key.getEncoded()));
+            pemWriter.writeObject(new PemObject("PUBLIC KEY", publicKeyEncoded));
         } finally {
             pemWriter.close();
         }
@@ -274,7 +300,7 @@ public class Ed25519VerificationMethodKeyProviderImpl implements VerificationMet
 
     /**
      * This {@link VerificationMethodKeyProvider} interface method implementation is done w.r.t.
-     * <a href="https://www.w3.org/community/reports/credentials/CG-FINAL-di-eddsa-2020-20220724/#ed25519verificationkey2020">d25519verificationkey2020</a>:
+     * <a href="https://www.w3.org/community/reports/credentials/CG-FINAL-di-eddsa-2020-20220724/#ed25519verificationkey2020">Ed25519verificationkey2020</a>:
      * <pre>
      * The publicKeyMultibase property of the verification method MUST be a public key encoded according to [MULTICODEC] and formatted according to [MULTIBASE].
      * The multicodec encoding of a Ed25519 public key is the two-byte prefix 0xed01 followed by the 32-byte public key data.
@@ -283,19 +309,17 @@ public class Ed25519VerificationMethodKeyProviderImpl implements VerificationMet
      * @return public verification key in multibase format.
      */
     public String getVerificationKeyMultibase() {
-        return buildVerificationKeyMultibase(this.verifyingKey);
-    }
 
-    byte[] signString(String message) {
+        if (this.keyPair == null) {
+            throw new RuntimeException("This instance features no self-generated key pair.");
+        }
 
-        byte[] msg = message.getBytes(StandardCharsets.UTF_8);
+        var encoded = this.keyPair.getPublic().getEncoded();
+        if (encoded != null) {
+            return Ed25519Utils.encodeMultibase(encoded);
+        }
 
-        Ed25519PrivateKeyParameters secretKeyParameters = new Ed25519PrivateKeyParameters(this.signingKey, 0);
-        var signer = new Ed25519Signer();
-        signer.init(true, secretKeyParameters);
-        signer.update(msg, 0, msg.length);
-
-        return signer.generateSignature();
+        throw new RuntimeException("The public key does not support encoding");
     }
 
     /**
@@ -306,34 +330,48 @@ public class Ed25519VerificationMethodKeyProviderImpl implements VerificationMet
      */
     public byte[] generateSignature(byte[] message) {
 
-        Ed25519PrivateKeyParameters secretKeyParameters = new Ed25519PrivateKeyParameters(this.signingKey, 0);
-        var signer = new Ed25519Signer();
-        signer.init(true, secretKeyParameters);
-        signer.update(message, 0, message.length);
+        if (this.provider == null) {
+            throw new RuntimeException("The JCE provider must be already set for an instance of class: " + this.getClass().getName());
+        }
 
-        return signer.generateSignature();
+        if (this.keyPair == null) {
+            throw new RuntimeException("This instance features no self-generated key pair.");
+        }
+
+        try {
+            var signer = Signature.getInstance("EdDSA", this.provider);
+            signer.initSign(this.keyPair.getPrivate());
+            signer.update(message);
+            return signer.sign();
+        } catch (SignatureException | InvalidKeyException | NoSuchAlgorithmException e) {
+            // the JCE provider should be already properly initialized in the constructor
+            throw new RuntimeException(e);
+        }
     }
 
-    boolean verify(String message, byte[] signature) {
-
-        Ed25519PublicKeyParameters publicKeyParameters = new Ed25519PublicKeyParameters(this.verifyingKey, 0);
-        var verifier = new Ed25519Signer();
-        verifier.init(false, publicKeyParameters);
-        byte[] msg = message.getBytes(StandardCharsets.UTF_8);
-        verifier.update(msg, 0, msg.length);
-
-        return verifier.verifySignature(signature);
-
+    @Override
+    public boolean isKeyMultibaseInSet(Set<String> multibaseEncodedKeys) {
+        return multibaseEncodedKeys.contains(this.getVerificationKeyMultibase());
     }
 
-    boolean verifyBytes(byte[] message, byte[] signature) {
+    boolean verify(byte[] message, byte[] signature) {
 
-        Ed25519PublicKeyParameters publicKeyParameters = new Ed25519PublicKeyParameters(this.verifyingKey, 0);
-        var verifier = new Ed25519Signer();
-        verifier.init(false, publicKeyParameters);
-        verifier.update(message, 0, message.length);
+        if (this.provider == null) {
+            throw new RuntimeException("The JCE provider must be already set for an instance of class: " + this.getClass().getName());
+        }
 
-        return verifier.verifySignature(signature);
+        if (this.keyPair == null) {
+            throw new RuntimeException("This instance features no self-generated key pair.");
+        }
 
+        try {
+            var verifier = Signature.getInstance("EdDSA", this.provider);
+            verifier.initVerify(this.keyPair.getPublic());
+            verifier.update(message);
+            return verifier.verify(signature);
+        } catch (SignatureException | InvalidKeyException | NoSuchAlgorithmException e) {
+            // the JCE provider should be already properly initialized in the constructor
+            throw new RuntimeException(e);
+        }
     }
 }
